--- a/Client/src/Components/Admin/stylesadmin/products.css
+++ b/Client/src/Components/Admin/stylesadmin/products.css
@@ -1,18 +1,20 @@
 .product-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 2rem;
 }
 
 .product-item {
-  width: calc(33.33% - 1rem);
-  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 1rem;
   box-sizing: border-box;
   overflow: hidden;
   transition: transform 0.2s ease-in-out;
+  background-color: #ffffff;
 }
 
 .product-item:hover {
@@ -20,35 +22,66 @@
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
 }
 
-.product-image img {
-  width: 100%;
-  height: auto;
-  display: block;
+.product-image {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 1rem;
 }
 
+.product-image img {
+  max-width: 100%;
+  max-height: 200px;
+  display: block;
+}
+
 .product-details {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   margin-top: 1rem;
 }
 
 .product-details h3 {
   margin-bottom: 0.5rem;
-  font-size: 1rem;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+.product-brand {
+  text-align: center;
+  margin-bottom: 0.5rem;
+  color: #888;
 }
 
 .product-rating {
-  font-size: 0.9rem;
   margin-bottom: 0.5rem;
+  text-align: center;
+  font-size: 1.2rem;
+}
+
+.product-rating span {
+  color: #ffc107;
 }
 
 .product-price {
   margin-bottom: 0.5rem;
   font-weight: bold;
+  text-align: center;
 }
 
 .product-regular-price {
   display: inline-block;
   margin-right: 0.5rem;
+  color: #888;
+}
+
+.product-sale-price {
+  display: inline-block;
+  color: #e74c3c;
 }
 
 .product-inventory {
@@ -60,21 +93,25 @@
   margin-bottom: 0.5rem;
   color: #888;
   font-size: 0.9rem;
+  text-align: center;
 }
 
 .product-buttons {
-  margin-top: 0.5rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0.5rem;
 }
 
-.update-btn, .delete-btn {
+.update-btn,
+.delete-btn {
   padding: 0.5rem;
   border-radius: 5px;
   border: none;
   color: white;
   cursor: pointer;
   font-size: 0.9rem;
+  margin: 0.2rem;
 }
 
 .update-btn {
