--- a/Client/src/Components/NavComponents/dropdown.css
+++ b/Client/src/Components/NavComponents/dropdown.css
@@ -8,7 +8,7 @@
 
   border: none;
   outline: none;
-  color: white;
+  
   background-color: inherit;
   font: inherit;
   margin: 0px;
@@ -17,9 +17,10 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: rgb(37,47,100);
+  background-color: white;
+  color:black;
   left: 0;
-  width: 100%;
+  width: 80%;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 100;
 }
