--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -1,6 +1,9 @@
- body {
+body {
   margin: 0;
-  
+  padding: 0;
+  box-sizing: border-box;
+  height: 100vh;
+
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -8,35 +11,33 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  margin: -3.1%;
+  padding: 0;
+  box-sizing: border-box;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 #userName {
-
   display: -webkit-box;
   overflow: hidden;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   font-size: small;
-  font-weight:500;
+  font-weight: 500;
   color: darkblue;
 }
-.hide{
+.hide {
   display: none;
-  
 }
 .myDiv:hover .hide {
   display: block;
   color: red;
-
-  
 }
 
-#menuSunLinksColor{
-  color: blue
+#menuSunLinksColor {
+  color: blue;
 }
-
-
-
